--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,12 +6,12 @@
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
-    <PackageProjectUrl>https://bonsai-rx.org/pythonnet</PackageProjectUrl>
-    <PackageLicenseUrl>https://github.com/bonsai-rx/pythonnet/blob/main/LICENSE</PackageLicenseUrl>
+    <PackageProjectUrl>https://bonsai-rx.org/python-scripting</PackageProjectUrl>
+    <PackageLicenseUrl>https://github.com/bonsai-rx/python-scripting/blob/main/LICENSE</PackageLicenseUrl>
     <PackageIconUrl>https://bonsai-rx.org/assets/images/bonsai.png</PackageIconUrl>
     <IncludeSymbols Condition="'$(Configuration)'=='Release'">true</IncludeSymbols>
     <GeneratePackageOnBuild Condition="'$(Configuration)'=='Release'">true</GeneratePackageOnBuild>
-    <RepositoryUrl>https://github.com/bonsai-rx/pythonnet.git</RepositoryUrl>
+    <RepositoryUrl>https://github.com/bonsai-rx/python-scripting.git</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <VersionSuffix></VersionSuffix>
     <Features>strict</Features>
