--- a/docs/articles/toc.yml
+++ b/docs/articles/toc.yml
@@ -1,7 +1,3 @@
 - name: Getting Started
-  href: intro.md
-  items:
-    - name: Quickstart
-      href: intro.md
-    - name: Dynamic Modules
-      href: modules.md
+- href: ../index.md
+- href: modules.md
