--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -8,29 +8,43 @@ jobs:
   build:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v2
-      
-      - name: Setup MSBuild
-        uses: microsoft/setup-msbuild@v1
-      
-      - name: Restore NuGet Packages
-        run: msbuild -t:restore src\Bonsai.Scripting.Python.sln
-
-      - name: Setup DocFX
-        uses: crazy-max/ghaction-chocolatey@v1
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
         with:
-          args: install docfx
+          submodules: true
+        
+      - name: Setup MSBuild
+        uses: microsoft/setup-msbuild@v2
+        
+      - name: Restore NuGet Packages
+        run: msbuild -t:restore src/Bonsai.Scripting.Python.sln
 
+      - name: Build Solution
+        run: msbuild src/Bonsai.Scripting.Python.sln /p:Configuration=Release
+
+      - name: Setup .NET Core SDK
+        uses: actions/setup-dotnet@v4.0.0
+        with:
+          dotnet-version: 7.x
+        
+      - name: Setup DocFX
+        run: dotnet tool restore
+
+      - name: Setup Bonsai
+        working-directory: .bonsai
+        run: .\Setup.ps1
+        
       - name: Build Documentation
-        run: docfx docs/docfx.json
+        working-directory: docs
+        run: .\build.ps1
           
       - name: Checkout gh-pages
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4.1.1
         with:
           ref: gh-pages
           path: gh-pages
       - name: Publish to github pages
-        uses: peaceiris/actions-gh-pages@v3
+        uses: peaceiris/actions-gh-pages@v3.9.3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_site
