--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,7 +2,7 @@
 <Project>
   <PropertyGroup>
     <Authors>Bonsai</Authors>
-    <Copyright>Copyright © Bonsai Foundation CIC 2023</Copyright>
+    <Copyright>Copyright © Bonsai Foundation CIC and Contributors 2023</Copyright>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageOutputPath>..\bin\$(Configuration)</PackageOutputPath>
