Add CI/CD and brought repository into compliance with modern standards

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-.vs
+.bonsai/Bonsai.exe*
+.bonsai/Packages/
+.bonsai/Settings/
+.vs/
+/artifacts/
 .venv
-bin
-obj
-Packages
-*.exe
-*.exe.*
 *.user
 *.suo
