--- a/src/Bonsai.Scripting.Python/Properties/launchSettings.json
+++ b/src/Bonsai.Scripting.Python/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Bonsai": {
       "commandName": "Executable",
-      "executablePath": "$(SolutionDir)..\\.bonsai\\Bonsai.exe",
+      "executablePath": "$(BonsaiExecutablePath)",
       "commandLineArgs": "--lib:\"$(TargetDir).\"",
       "nativeDebugging": true
     }
